design page formation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span class="letters">Développeur Web</span>
         </span>
       </h1>
-      <button type="button" class="btnContact">CONTACTEZ MOI</button>
+      <a class="btnContactDirect" href="#contact"><button type="button" class="btnContact"> CONTACTEZ MOI</button></a>
     </div>
     <div class="copyright">© 2020 by Pascal Jurion.</div>
 
@@ -97,54 +97,55 @@
   </div>
   <div class="container">
     <div class="row step">
-      <div class="col years">
+      <div class="col col-lg-2 years">
         2019 - 2020
       </div>
-      <div class="col">
+      <div class="col title-formation">
         Développeur Web
       </div>
       <div class="col">
-        <p>Titre profésionnel niveau 5 (bac +2).</p>
-        <p>Wild Code school Reims (51)</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
+        <p><img class="logos-formation" src="img/icons/loc.svg"> Wild Code school Reims (51)</p>
+        <p><img class="logos-formation" src="img/icons/bolt.svg"> React Js - Node Js - Git - Méthode Agile</p>
       </div>
     </div>
     <div class="row step">
-      <div class="col">
+      <div class="col col-lg-2 years">
         2019
       </div>
-      <div class="col">
+      <div class="col title-formation">
         Formation Java J2E.
       </div>
       <div class="col">
-        <p>Attestation de formation</p>
-        <p>Afpa Amiens (80)</p>
-        <p>Java jee - Spring - JSF - Modélisation UML</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg"> Attestation de formation</p>
+        <p><img class="logos-formation" src="img/icons/loc.svg"> Afpa Amiens (80)</p>
+        <p><img class="logos-formation" src="img/icons/bolt.svg"> Java jee - Spring - JSF - Modélisation UML</p>
       </div>
 
     </div>
     <div class="row step">
-      <div class="col">
+      <div class="col col-lg-2 years">
         2016 - 2018
       </div>
-      <div class="col">
+      <div class="col title-formation">
         Technicien supérieur en support informatique
       </div>
       <div class="col">
-        <p>Titre profésionnel niveau 5 (bac +2).</p>
-        <p>Greta Soissons (02)</p>
-        <p>windows serveur 2012 - Administratration linux - Architècture réseaux</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
+        <p><img class="logos-formation" src="img/icons/loc.svg"> Greta Soissons (02)</p>
+        <p><img class="logos-formation" src="img/icons/bolt.svg"> windows serveur - Administratration linux - Architècture réseaux</p>
       </div>
     </div>
     <div class="row step">
-      <div class="col">
+      <div class="col col-lg-2 years">
         1985
       </div>
-      <div class="col">
-        <p>BEP Electro-technicien</p>
+      <div class="col title-formation">
+        <p>Electro-technicien</p>
       </div>
       <div class="col">
-        <p>Lycée professionnel Verdun (55)</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg"> Brevet d'Etudes Professionnelles</p>
+        <p><img class="logos-formation" src="img/icons/loc.svg"> Lycée professionnel Verdun (55)</p>
       </div>
 
     </div>
@@ -287,10 +288,10 @@
       </div>
     </div>
   </div>
-  <div class="bgimg-4"></div>
+  <!-- <div class="bgimg-4"></div> -->
 
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
-  <div class="bgimg-2"></div>
+  <div class="bgimg-4"></div>
   <div id="contact">
     <h3 id="contact-title" class="contact-title">CONTACTS</h3>
   </div>
