add logos buisness

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
   <div id="school">
     <h3 class="title-section">Formations</h3>
   </div>
-  <div class="container">
+  <div class="container container-formations">
+    
     <div class="row step">
       <div class="col col-lg-2 years">
         2019 - 2020
@@ -104,7 +105,7 @@
         Développeur Web
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg"> Prépa Titre profésionnel niveau 5 (bac +2).</p>
         <p><img class="logos-formation" src="img/icons/loc.svg"> Wild Code school Reims (51)</p>
         <p><img class="logos-formation" src="img/icons/bolt.svg"> React Js - Node Js - Git - Méthode Agile</p>
       </div>
@@ -133,7 +134,8 @@
       <div class="col">
         <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
         <p><img class="logos-formation" src="img/icons/loc.svg"> Greta Soissons (02)</p>
-        <p><img class="logos-formation" src="img/icons/bolt.svg"> windows serveur - Administratration linux - Architècture réseaux</p>
+        <p><img class="logos-formation" src="img/icons/bolt.svg"> windows serveur - Administratration linux -
+          Architècture réseaux</p>
       </div>
     </div>
     <div class="row step">
@@ -161,7 +163,7 @@
   </div>
 
   <div class="container">
-    <!-- <div class="row box-timeline">
+    <div class="row box-timeline">
       <div class="ligne"></div>
       <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/dev.svg" alt="développeur web">
       </div>
@@ -174,34 +176,36 @@
       <div class="box b1" data-anim="1">
         <h3>Stage développeur web</h3>
         <p>2020</p>
+        <img class="logo-entreprise-arc" src="./img/icons/arc.png" alt="Alain Renault Communication">
         <p>Alain Renault Communication - Reims (51)</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
           dicta officia a dolorum consectetur corporis?</p>
-      </div>
-      <div class="box b2" data-anim="2">
-        <h3>Technicien methode</h3>
-        <p>2005 / 2016</p>
+        </div>
+        <div class="box b2" data-anim="2">
+          <h3>Technicien methode</h3>
+          <p>2005 / 2016</p>
+          <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube">
         <p>Eurotube - Chimay (Belgique)</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
           dicta officia a dolorum consectetur corporis?</p>
       </div>
       <div class="box b3" data-anim="3">
-        <h3>Conducteur ligne automatisée</h3>
+        <h3>Conducteur de ligne automatisée</h3>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
           dicta officia a dolorum consectetur corporis?</p>
-      </div>
-      <div class="box b4" data-anim="4">
-        <h3>Militaire</h3>
-        <p>1987 / 1990</p>
+        </div>
+        <div class="box b4" data-anim="4">
+          <h3>Engagé volontaire</h3>
+          <p>1987 / 1990</p>
+          <img class="logo-entreprise-68" src="./img/icons/68.png" alt="">
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
-          dicta officia a dolorum consectetur corporis?</p>
-      </div> -->
+        <p>Mission d'assitance opérationnelle.Séjour Tchad, Répubublique centrafricaine.</p>
+      </div>
 
 
-    </div>
+  </div>
   </div>
 
 
