--- a/index.html
+++ b/index.html
@@ -174,34 +174,31 @@
       <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/army.svg" alt="militaire"></div>
 
       <div class="box b1" data-anim="1">
-        <h3>Stage développeur web</h3>
+        <h3>Développeur web</h3>
+        <!-- <img class="logo-entreprise-arc" src="./img/icons/arc.png" alt="Alain Renault Communication"> -->
         <p>2020</p>
-        <img class="logo-entreprise-arc" src="./img/icons/arc.png" alt="Alain Renault Communication">
         <p>Alain Renault Communication - Reims (51)</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
-          dicta officia a dolorum consectetur corporis?</p>
+        <p>Stage fin d'étude.<br>Réalisation d'un projet back office en PHP sous CodeIgniter.</p>
         </div>
         <div class="box b2" data-anim="2">
           <h3>Technicien methode</h3>
           <p>2005 / 2016</p>
-          <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube">
+          <!-- <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube"> -->
         <p>Eurotube - Chimay (Belgique)</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
-          dicta officia a dolorum consectetur corporis?</p>
+        <p>Développement d'application interne (GMAO, Superviseur production, Surveillance qualité, ...)<br>Gestion de parc informatique.<br>Assistance Utilisateurs.</p>
       </div>
       <div class="box b3" data-anim="3">
         <h3>Conducteur de ligne automatisée</h3>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
-          dicta officia a dolorum consectetur corporis?</p>
+        <p>Responsable de ligne.<br>Imprimeur offset</p>
         </div>
         <div class="box b4" data-anim="4">
           <h3>Engagé volontaire</h3>
           <p>1987 / 1990</p>
-          <img class="logo-entreprise-68" src="./img/icons/68.png" alt="">
+          <!-- <img class="logo-entreprise-68" src="./img/icons/68.png" alt=""> -->
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
-        <p>Mission d'assitance opérationnelle.Séjour Tchad, Répubublique centrafricaine.</p>
+        <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
 
 
