responsive cards school

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
   <div id="school">
     <h3 class="title-section">Formations</h3>
   </div>
+
   <div class="container container-formations">
-    
+
     <div class="row step">
       <div class="col col-lg-2 years">
         2019 - 2020
@@ -110,6 +111,8 @@
         <p><img class="logos-formation" src="img/icons/bolt.svg"> React Js - Node Js - Git - Méthode Agile</p>
       </div>
     </div>
+
+
     <div class="row step">
       <div class="col col-lg-2 years">
         2019
@@ -122,37 +125,39 @@
         <p><img class="logos-formation" src="img/icons/loc.svg"> Afpa Amiens (80)</p>
         <p><img class="logos-formation" src="img/icons/bolt.svg"> Java jee - Spring - JSF - Modélisation UML</p>
       </div>
-
     </div>
-    <div class="row step">
-      <div class="col col-lg-2 years">
-        2016 - 2018
-      </div>
-      <div class="col title-formation">
-        Technicien supérieur en support informatique
-      </div>
-      <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg"> Greta Soissons (02)</p>
-        <p><img class="logos-formation" src="img/icons/bolt.svg"> windows serveur - Administratration linux -
-          Architècture réseaux</p>
-      </div>
-    </div>
-    <div class="row step">
-      <div class="col col-lg-2 years">
-        1985
-      </div>
-      <div class="col title-formation">
-        <p>Electro-technicien</p>
-      </div>
-      <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg"> Brevet d'Etudes Professionnelles</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg"> Lycée professionnel Verdun (55)</p>
-      </div>
 
+
+  <div class="row step">
+    <div class="col col-lg-2 years">
+      2016 - 2018
+    </div>
+    <div class="col title-formation">
+      Technicien supérieur en support informatique
+    </div>
+    <div class="col">
+      <p><img class="logos-formation" src="img/icons/medal.svg"> Titre profésionnel niveau 5 (bac +2).</p>
+      <p><img class="logos-formation" src="img/icons/loc.svg"> Greta Soissons (02)</p>
+      <p><img class="logos-formation" src="img/icons/bolt.svg"> windows serveur - Administratration linux -
+        Architècture réseaux</p>
     </div>
   </div>
 
+
+  <div class="row step">
+    <div class="col col-lg-2 years">
+      1985
+    </div>
+    <div class="col title-formation">
+      <p>Electro-technicien</p>
+    </div>
+    <div class="col">
+      <p><img class="logos-formation" src="img/icons/medal.svg"> Brevet d'Etudes Professionnelles</p>
+      <p><img class="logos-formation" src="img/icons/loc.svg"> Lycée professionnel Verdun (55)</p>
+    </div>
+
+  </div>
+  
   <div class="img-fluid bgimg-1"></div>
 
 
@@ -179,30 +184,31 @@
         <p>2020</p>
         <p>Alain Renault Communication - Reims (51)</p>
         <p>Stage fin d'étude.<br>Réalisation d'un projet back office en PHP sous CodeIgniter.</p>
-        </div>
-        <div class="box b2" data-anim="2">
-          <h3>Technicien methode</h3>
-          <p>2005 / 2016</p>
-          <!-- <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube"> -->
+      </div>
+      <div class="box b2" data-anim="2">
+        <h3>Technicien methode</h3>
+        <p>2005 / 2016</p>
+        <!-- <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube"> -->
         <p>Eurotube - Chimay (Belgique)</p>
-        <p>Développement d'application interne (GMAO, Superviseur production, Surveillance qualité, ...)<br>Gestion de parc informatique.<br>Assistance Utilisateurs.</p>
+        <p>Développement d'application interne (GMAO, Superviseur production, Surveillance qualité, ...)<br>Gestion de
+          parc informatique.<br>Assistance Utilisateurs.</p>
       </div>
       <div class="box b3" data-anim="3">
         <h3>Conducteur de ligne automatisée</h3>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
         <p>Responsable de ligne.<br>Imprimeur offset</p>
-        </div>
-        <div class="box b4" data-anim="4">
-          <h3>Engagé volontaire</h3>
-          <p>1987 / 1990</p>
-          <!-- <img class="logo-entreprise-68" src="./img/icons/68.png" alt=""> -->
+      </div>
+      <div class="box b4" data-anim="4">
+        <h3>Engagé volontaire</h3>
+        <p>1987 / 1990</p>
+        <!-- <img class="logo-entreprise-68" src="./img/icons/68.png" alt=""> -->
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
         <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
 
 
-  </div>
+    </div>
   </div>
 
 
