clean folder img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
     <a class="navbar-brand" href="#">
-      <img src="./img/icons/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top"
+      <img src="./img/icons/home/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top"
         alt="logo curiculum vitaé" loading="lazy">
       Curiculum Vitaé
     </a>
@@ -67,23 +67,23 @@
     <div class="media">
       <ul>
         <li>
-          <a href="./img/cv-pdf.pdf" target="_blank" rel="noopener">
-            <img class="logo-media" src="img/icons/file.svg" alt="logo Télécharger pdf" title="Télécharger le pdf">
+          <a href="./img/cv-pascal.pdf" target="_blank" rel="noopener">
+            <img class="logo-media" src="img/icons/home/pdf.svg" alt="logo Télécharger pdf" title="Télécharger le pdf">
           </a>
         </li>
         <li>
           <a href="https://gitlab.com/c3soft" target="_blank" rel="noopener">
-            <img class="logo-media" src="img/icons/gitlab.svg" alt="logo gitlab" title="gitlab">
+            <img class="logo-media" src="img/icons/home/gitlab.svg" alt="logo gitlab" title="gitlab">
           </a>
         </li>
         <li>
           <a href="https://github.com/c3soft" target="_blank" rel="noopener">
-            <img class="logo-media" src="img/icons/github.svg" alt="logo github" title="github">
+            <img class="logo-media" src="img/icons/home/github.svg" alt="logo github" title="github">
           </a>
         </li>
         <li>
           <a href="http://www.linkedin.com/in/pascal-jurion/" target="_blank" rel="noopener">
-            <img class="logo-media" src="img/icons/linkedin.svg" alt="logo linkedin" title="linkedin">
+            <img class="logo-media" src="img/icons/home/linkedin.svg" alt="logo linkedin" title="linkedin">
           </a>
         </li>
       </ul>
@@ -107,9 +107,12 @@
         Développeur Web
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Prépa Titre profésionnel niveau 5 (bac +2).</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Wild Code school Reims (51)</p>
-        <p><img class="logos-formation" src="img/icons/bolt.svg" alt="logo process"> React Js - Node Js - Git - Méthode Agile</p>
+        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Prépa Titre profésionnel
+          niveau 5 (bac +2).</p>
+        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Wild Code school Reims
+          (51)</p>
+        <p><img class="logos-formation" src="img/icons/school/bolt.svg" alt="logo process"> React Js - Node Js - Git -
+          Méthode Agile</p>
       </div>
     </div>
 
@@ -122,9 +125,11 @@
         Formation Java J2E.
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Attestation de formation</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Afpa Amiens (80)</p>
-        <p><img class="logos-formation" src="img/icons/bolt.svg" alt="logo process"> Java jee - Spring - JSF - Modélisation UML</p>
+        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Attestation de formation
+        </p>
+        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Afpa Amiens (80)</p>
+        <p><img class="logos-formation" src="img/icons/school/bolt.svg" alt="logo process"> Java jee - Spring - JSF -
+          Modélisation UML</p>
       </div>
     </div>
 
@@ -137,9 +142,11 @@
         Technicien supérieur en support informatique
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Titre profésionnel niveau 5 (bac +2).</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Greta Soissons (02)</p>
-        <p><img class="logos-formation" src="img/icons/bolt.svg" alt="logo process"> windows serveur - Administratration linux -
+        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Titre profésionnel niveau 5
+          (bac +2).</p>
+        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Greta Soissons (02)</p>
+        <p><img class="logos-formation" src="img/icons/school/bolt.svg" alt="logo process"> windows serveur -
+          Administratration linux -
           Architècture réseaux</p>
       </div>
     </div>
@@ -153,8 +160,10 @@
         <p>Electro-technicien</p>
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Brevet d'Etudes Professionnelles</p>
-        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Lycée professionnel Verdun (55)</p>
+        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Brevet d'Etudes Professionnelles
+        </p>
+        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Lycée professionnel Verdun (55)
+        </p>
       </div>
 
     </div>
@@ -174,40 +183,52 @@
   <div class="container">
     <div class="row box-timeline">
       <div class="ligne"></div>
-      <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/dev.svg" alt="développeur web">
+      <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/experience/dev.svg"
+          alt="développeur web">
       </div>
-      <div class="rond r2" data-anim="2"><img class="experience-logo" src="./img/icons/method.svg"
+      <div class="rond r2" data-anim="2"><img class="experience-logo" src="./img/icons/experience/method.svg"
           alt="technicien methode"></div>
-      <div class="rond r3" data-anim="3"><img class="experience-logo" src="./img/icons/factory.svg"
+      <div class="rond r3" data-anim="3"><img class="experience-logo" src="./img/icons/experience/factory.svg"
           alt="conducteur de ligne usine"></div>
-      <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/army.svg" alt="militaire">
+      <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/experience/army.svg"
+          alt="militaire">
       </div>
 
       <div class="box b1" data-anim="1">
-        <h3>Développeur web</h3>
-        <!-- <img class="logo-entreprise-arc" src="./img/icons/arc.png" alt="Alain Renault Communication"> -->
+        <div class="title-experience">
+          <h3>Développeur web</h3>
+          <img class="logo-entreprise-arc" src="./img/icons/experience/arc.png" alt="Alain Renault Communication">
+        </div>
         <p>2020</p>
         <p>Alain Renault Communication - Reims (51)</p>
         <p>Stage fin d'étude.<br>Réalisation d'un projet back office en PHP sous CodeIgniter.</p>
       </div>
       <div class="box b2" data-anim="2">
-        <h3>Technicien methode</h3>
+        <div class="title-experience">
+          <h3>Technicien methode</h3>
+          <img class="logo-entreprise-soupl" src="./img/icons/experience/soupletube.png" alt="Entreprise soupketube">
+        </div>
         <p>2005 / 2016</p>
-        <!-- <img class="logo-entreprise-soupl" src="./img/icons/soupletube.png" alt="Entreprise soupketube"> -->
         <p>Eurotube - Chimay (Belgique)</p>
         <p>Développement d'application interne (GMAO, Superviseur production, Surveillance qualité, ...)<br>Gestion de
           parc informatique.<br>Assistance Utilisateurs.</p>
       </div>
       <div class="box b3" data-anim="3">
-        <h3>Conducteur de ligne automatisée</h3>
+        <div class="title-experience">
+          <h3>Conducteur de ligne</h3>
+          <img class="logo-entreprise-soupl" src="./img/icons/experience/soupletube.png" alt="Entreprise soupketube">
+        </div>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
-        <p>Responsable de ligne.<br>Imprimeur offset</p>
+        <p>Responsable de ligne automatisée.<br>Imprimeur offset</p>
       </div>
       <div class="box b4" data-anim="4">
-        <h3>Engagé volontaire</h3>
+        <div class="title-experience">
+          <h3>Engagé volontaire</h3>
+          <img class="logo-entreprise-68" src="./img/icons/experience/68raa.png" alt="">
+
+        </div>
         <p>1987 / 1990</p>
-        <!-- <img class="logo-entreprise-68" src="./img/icons/68.png" alt=""> -->
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
         <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
@@ -228,18 +249,18 @@
   <div class="container-fluid container-logos">
     <div class="row">
       <div class="col">
-        <img class="logos-techno" src="./img/icons/techno/html.svg" alt="html5">
-        <img class="logos-techno" src="./img/icons/techno/css.svg" alt="css3">
-        <img class="logos-techno" src="./img/icons/techno/js.svg" alt="java script">
-        <img class="logos-techno" src="./img/icons/techno/react.svg" alt="react js">
-        <img class="logos-techno" src="./img/icons/techno/php.svg" alt="php">
-        <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="codeigniter">
-        <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="sql">
-        <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="linux">
-        <img class="logos-techno" src="./img/icons/techno/git.svg" alt="git">
-        <img class="logos-techno" src="./img/icons/techno/ps.svg" alt="photoshop">
-        <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="wordpress">
-        <img class="logos-techno" src="./img/icons/techno/agile.png" alt="méthode agile">
+        <img class="logos-techno" src="./img/icons/skills/techno/html.svg" alt="html5">
+        <img class="logos-techno" src="./img/icons/skills/techno/css.svg" alt="css3">
+        <img class="logos-techno" src="./img/icons/skills/techno/js.svg" alt="java script">
+        <img class="logos-techno" src="./img/icons/skills/techno/react.svg" alt="react js">
+        <img class="logos-techno" src="./img/icons/skills/techno/php.svg" alt="php">
+        <img class="logos-techno" src="./img/icons/skills/techno/ci.svg" alt="codeigniter">
+        <img class="logos-techno" src="./img/icons/skills/techno/sql.svg" alt="sql">
+        <img class="logos-techno" src="./img/icons/skills/techno/linux.svg" alt="linux">
+        <img class="logos-techno" src="./img/icons/skills/techno/git.svg" alt="git">
+        <img class="logos-techno" src="./img/icons/skills/techno/ps.svg" alt="photoshop">
+        <img class="logos-techno" src="./img/icons/skills/techno/wp.svg" alt="wordpress">
+        <img class="logos-techno" src="./img/icons/skills/techno/agile.png" alt="méthode agile">
       </div>
     </div>
   </div>
@@ -252,7 +273,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/team.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/team.svg" alt="Méthode scrum">
         <p class="social-header">Esprit d'équipe</p>
         <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
           clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
@@ -260,7 +281,7 @@
       </div>
 
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/curious.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/curious.svg" alt="Méthode scrum">
         <p class="social-header">Curieux</p>
         <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
         </p>
@@ -268,7 +289,7 @@
       </div>
 
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/creative.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/creative.svg" alt="Méthode scrum">
         <p class="social-header">Créatif</p>
         <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
           morning because I love what I do, making beautiful designs come to life.</p>
@@ -279,21 +300,21 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
         <p class="social-header">Expérience</p>
         <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
           you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
 
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
         <p class="social-header">PUNCTUAL</p>
         <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
           and a respect for other people's time.</p>
 
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
         <p class="social-header">MAGIC</p>
         <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
           through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
@@ -306,15 +327,15 @@
 
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
   <div class="bgimg-4"></div>
-  <div id="contact">
+  <img class="signature" src="/img/icons/contact/signature.svg" alt="signature pascal jurion">   
+  <div id="contact" class="title-contact">
     <h3 id="contact-title" class="contact-title">CONTACTS</h3>
   </div>
-
   <div class="container">
     <div class="row container-contact">
       <div class="contact-icons">
         <div class="col-sm-4 item-contact">
-          <img class="logo-contact" src="./img/icons/phone.svg" alt="localisation du contact">
+          <img class="logo-contact" src="./img/icons/contact/phone.svg" alt="localisation du contact">
           <p class="contact-header">Téléphone</p>
           <p class="contact-feature">06 04 48 23 36</p>
         </div>
@@ -322,7 +343,7 @@
 
       <div class="contact-icons">
         <div class="col-sm-4 item-contact">
-          <img class="logo-contact" src="./img/icons/localisation.svg" alt="localisation du contact">
+          <img class="logo-contact" src="./img/icons/contact/localisation.svg" alt="localisation du contact">
           <p class="contact-header">Adresse</p>
           <p class="contact-feature">Hirson (02)</p>
         </div>
@@ -330,18 +351,16 @@
 
       <div class="contact-icons">
         <div class="col-sm-4 item-contact">
-          <img class="logo-contact" src="./img/icons/mail.svg" alt="localisation du contact">
+          <img class="logo-contact" src="./img/icons/contact/mail.svg" alt="localisation du contact">
           <p class="contact-header">email</p>
           <p class="contact-feature">pjurion@protonmail.com</p>
         </div>
       </div>
     </div>
+        
+
   </div>
 
-
-
-
-  <!-- <div class="bgimg-2"></div> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
