resize image skill

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </div>
 
   <div class="container">
-    <div class="row box-timeline">
+    <!-- <div class="row box-timeline">
       <div class="ligne"></div>
       <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/experience/dev.svg"
           alt="développeur web">
@@ -219,7 +219,7 @@
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
         <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
-    </div>
+    </div> -->
   </div>
 
 
