--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </div>
 
   <div class="container">
-    <!-- <div class="row box-timeline">
+    <div class="row box-timeline">
       <div class="ligne"></div>
       <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/experience/dev.svg"
           alt="développeur web">
@@ -204,7 +204,7 @@
       <div class="box b3" data-anim="3">
         <div class="title-experience">
           <h3>Conducteur de ligne</h3>
-          <img class="logo-entreprise-soupl" src="./img/icons/experience/soupletube.png" alt="Entreprise soupketube">
+          <img class="logo-entreprise-soupl" src="./img/icons/buisness/cebal.png" alt="Entreprise soupketube">
         </div>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
@@ -219,7 +219,7 @@
         <p>68 Régiment d'artillerie - Lavalbone (01)</p>
         <p>Mission d'assitance opérationnelle.<br>Séjour Tchad, Répubublique centrafricaine.</p>
       </div>
-    </div> -->
+    </div> 
   </div>
 
 
