--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="box b3" data-anim="3">
         <div class="title-experience">
           <h3>Conducteur de ligne</h3>
-          <img class="logo-entreprise-soupl" src="./img/icons/buisness/cebal.png" alt="Entreprise soupketube">
+          <img class="logo-entreprise-cebal" src="./img/icons/buisness/cebal.png" alt="Entreprise soupketube">
         </div>
         <p>1990 / 2005</p>
         <p>Cebal - Ste Menehould (51)</p>
@@ -302,7 +302,7 @@
 
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
   <div class="bgimg-4"></div>
-  <img class="signature" src="/img/icons/contact/signature.svg" alt="signature pascal jurion">
+  <!-- <img class="signature" src="/img/icons/contact/signature.svg" alt="signature pascal jurion"> -->
   <div id="contact" class="title-contact">
     <h3 id="contact-title" class="contact-title">CONTACTS</h3>
   </div>
