--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
     <a class="navbar-brand" href="#">
@@ -152,9 +151,9 @@
         <p>Electro-technicien</p>
       </div>
       <div class="col">
-        <p><img class="logos-formation" src="img/icons/medal.svg" alt="logo diplôme"> Brevet d'Etudes Professionnelles
+        <p><img class="logos-formation" src="img/icons/school/medal.svg" alt="logo diplôme"> Brevet d'Etudes Professionnelles
         </p>
-        <p><img class="logos-formation" src="img/icons/loc.svg" alt="logo localisation"> Lycée professionnel Verdun (55)
+        <p><img class="logos-formation" src="img/icons/school/loc.svg" alt="logo localisation"> Lycée professionnel Verdun (55)
         </p>
       </div>
     </div>
