--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Curiculum pascal jurion développeur web">
+  <meta name="description" content="Curiculum vitaé pascal jurion développeur web">
+  <meta name="author" content="Pascal Jurion">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="icon" href="favicon.png">
   <link href="style.css" type="text/css" rel="stylesheet">
@@ -262,13 +263,13 @@
           an incredible sense of liberation.</p>
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/curious.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/curious.svg" alt="Curiosité">
         <p class="social-header">Curieux</p>
         <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
         </p>
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/creative.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/creative.svg" alt="Créativité">
         <p class="social-header">Créatif</p>
         <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
           morning because I love what I do, making beautiful designs come to life.</p>
@@ -278,19 +279,19 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Expérience professionnelle">
         <p class="social-header">Expérience</p>
         <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
           you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Administration système">
         <p class="social-header">PUNCTUAL</p>
         <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
           and a respect for other people's time.</p>
       </div>
       <div class="col-sm-4 social">
-        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Méthode scrum">
+        <img class="social-logo" src="./img/icons/skills/historic.svg" alt="Déploiement">
         <p class="social-header">MAGIC</p>
         <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
           through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
@@ -309,7 +310,7 @@
     <div class="row container-contact">
       <div class="contact-icons">
         <div class="col-sm-4 item-contact">
-          <img class="logo-contact" src="./img/icons/contact/phone.svg" alt="localisation du contact">
+          <img class="logo-contact" src="./img/icons/contact/phone.svg" alt="Téléphone du contact">
           <p class="contact-header">Téléphone</p>
           <p class="contact-feature">06 04 48 23 36</p>
         </div>
@@ -325,7 +326,7 @@
 
       <div class="contact-icons">
         <div class="col-sm-4 item-contact">
-          <img class="logo-contact" src="./img/icons/contact/mail.svg" alt="localisation du contact">
+          <img class="logo-contact" src="./img/icons/contact/mail.svg" alt="email du contact">
           <p class="contact-header">email</p>
           <p class="contact-feature">pjurion@protonmail.com</p>
         </div>
@@ -335,7 +336,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
